--- a/database/package.json
+++ b/database/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "pg": "^8.3.3",
-    "pg-copy-streams": "^5.1.1"
+    "pg-copy-streams": "^5.1.1",
+    "puppeteer": "^5.2.1"
   }
 }
