--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "liamMurray",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
     "pg": "^7.18.1"
